all file cleanup

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Alexander Beuge">
     <title>BEUGISM</title>
     <link rel="icon" href="favicon.ico">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600" rel="stylesheet">
@@ -46,7 +46,7 @@
           </div>
           <div class="col-md-4">
             <a href="general-election-2017.html"><div class="rollover">
-              <img src="images/theresa-may-thumb-beugism.jpg" class="img-responsive" alt="Responsive image" height="400" width="400">
+              <img src="images/theresa-may-thumb-beugism.jpg" class="img-responsive may" alt="Responsive image" height="400" width="400">
             </div></a>
             <a href="plastic-ocean.html"><div class="rollover">
               <img src="images/octopus-thumb-beugism.jpg" class="img-responsive margin-top" alt="Responsive image" height="707" width="400">
@@ -57,7 +57,7 @@
           </div>
           <div class="col-md-4">
             <a href="autumn-statement.html"><div class="rollover">
-              <img src="images/old-lady-thumb-beugism.jpg" class="img-responsive" alt="Responsive image" height="413" width="400">
+              <img src="images/old-lady-thumb-beugism.jpg" class="img-responsive may" alt="Responsive image" height="413" width="400">
             </div></a>
             <a href="sick-days.html"><div class="rollover">
               <img src="images/sick-days-thumb-beugism.jpg" class="img-responsive margin-top" alt="Responsive image" height="422" width="400">
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-md-8">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="trump-clinton.html"><div class="rollover">
                   <img src="images/hillary-thumb.jpg" class="img-responsive hillary" alt="Responsive image" height="459" width="400">
                 </div></a>
@@ -165,21 +165,21 @@
         <div class="row">
           <div class="col-md-4">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="safe-cycling.html"><div class="rollover">
                   <img src="images/beugism-safecycling-thumb.jpg" class="img-responsive cycle" alt="Responsive image" height="387" width="400">
                 </div></a>
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="robot.html"><div class="rollover">
                   <img src="images/beugism-robot-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="572" width="400">
                 </div></a>
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="plane.html"><div class="rollover">
                   <img src="images/beugism-plane-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="279" width="400">
                 </div></a>
@@ -188,7 +188,7 @@
           </div>
           <div class="col-md-8">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="sewing-machine-day.html"><div class="rollover">
                   <img src="images/granny-thumb.jpg" class="img-responsive granny" alt="Responsive image" height="800" width="800">
                 </div></a>
@@ -207,21 +207,21 @@
           </div>
           <div class="col-md-8">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="cycling.html"><div class="rollover">
                   <img src="images/beugism-cycling-thumb.jpg" class="img-responsive cycling" alt="Responsive image" height="668" width="800">
                 </div></a>
               </div>
               <div class="col-md-6">
                 <div class="row">
-                  <div class="col-xs-12">
+                  <div class="col-md-12">
                     <a href="olive-oil.html"><div class="rollover">
                       <img src="images/beugism-olive-oil-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="612" width="400">
                     </div></a>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-xs-12">
+                  <div class="col-md-12">
                     <a href="dogs-v-cats.html"><div class="rollover">
                       <img src="images/beugism-dogsvcats-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="840" width="400">
                     </div></a>
@@ -240,22 +240,22 @@
           </div>
           <div class="col-md-4">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="sitting.html"><div class="rollover">
                   <img src="images/beugism-sitting-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="396" width="400">
                 </div></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="computer-virus.html"><div class="rollover">
                   <img src="images/beugism-computer-virus-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="396" width="400">
                 </div></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="eagles-v-drones.html"><div class="rollover">
                   <img src="images/beugism-eaglesvdrones-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="508" width="400">
                 </div></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="gender.html"><div class="rollover">
                   <img src="images/beugism-gender-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="504" width="400">
                 </div></a>
@@ -268,27 +268,27 @@
         <div class="row">
           <div class="col-md-4">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="ikea.html"><div class="rollover">
                   <img src="images/beugism-ikea-thumb.jpg" class="img-responsive hillary" alt="Responsive image" height="761" width="400">
                 </div></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="sugar.html"><div class="rollover">
                   <img src="images/beugism-sugar-thumb.jpg" class="img-responsive sugar" alt="Responsive image" height="422" width="400">
                 </div></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="nobel-prize.html"><div class="rollover">
                   <img src="images/beugism-scientist-girl-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="794" width="400">
                 </div></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="mullet.html"><div class="rollover">
                   <img src="images/beugism-mullet-rachel.jpg" class="img-responsive margin-top" alt="Responsive image" height="532" width="400">
                 </div></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="mullet.html"><div class="rollover">
                   <img src="images/beugism-mullet-dj-han.jpg" class="img-responsive margin-top" alt="Responsive image" height="545" width="400">
                 </div></a>
@@ -297,7 +297,7 @@
           </div>
           <div class="col-md-8">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <a href="braking-good.html"><div class="rollover">
                   <img src="images/beugism-breaking-good-thumb.jpg" class="img-responsive margin-car" alt="Responsive image" height="387" width="400">
                 </div></a>
@@ -362,6 +362,6 @@
       </div>
       </footer>
       <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-      <script src="js/bootstrap.js"></script>
+      <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
