--- a/mullet.html
+++ b/mullet.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Alexander Beuge">
     <title>BEUGISM | Mullet</title>
     <link rel="icon" href="favicon.ico">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
@@ -41,9 +41,11 @@
           <h3 class="text-left">Client: Style League</h3>
           <p>These illustrations were commissioned by Berlin based
             magazine Style League. They show all relevant steps for ice fishing.</p>
-            <button class="js-btn-back margin-bottom"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
       </div>
+    </div>
+    <div class="container">
       <div class="col-md-6">
         <div class="row">
           <div class="col-xs-12">
@@ -90,6 +92,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
