--- a/trump-clinton.html
+++ b/trump-clinton.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Alexander Beuge">
     <title>BEUGISM | Trump Clinton</title>
     <link rel="icon" href="favicon.ico">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
@@ -44,20 +44,22 @@
             outcome of the election.</p>
         </div>
       </div>
+    </div>
+    <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-6 col-sm-6">
-          <img src="images/beugism-trump-happy-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="300" width="300">
+          <img src="images/beugism-trump-happy-thumb.jpg" class="img-responsive" alt="Responsive image" height="300" width="300">
         </div>
         <div class="col-md-3 col-xs-6 col-sm-6">
-          <img src="images/hillary-thumb-beugism.jpg" class="img-responsive margin-top" alt="Responsive image" height="300" width="300">
+          <img src="images/hillary-thumb-beugism.jpg" class="img-responsive" alt="Responsive image" height="300" width="300">
         </div>
         <div class="col-md-3 col-xs-6 col-sm-6">
-          <img src="images/beugism-trump-sad.jpg" class="img-responsive margin-top" alt="Responsive image" height="300" width="300">
+          <img src="images/beugism-trump-sad.jpg" class="img-responsive" alt="Responsive image" height="300" width="300">
         </div>
-        <div class="col-md-3 col-xs-6 col-sm-6">
-          <img src="images/beugism-clinton-happy.jpg" class="img-responsive margin-top" alt="Responsive image" height="300" width="300">
+        <div class=" col-md-3 col-xs-6 col-sm-6">
+          <img src="images/beugism-clinton-happy.jpg" class="img-responsive" alt="Responsive image" height="300" width="300">
         </div>
-        <div class="col-md-3 col-xs-9 col-sm-6">
+        <div class="col-md-push-2 col-md-3 col-xs-9 col-sm-6">
         <p class="margin-top">I've been asked to supply further illustrations of Trump and Clinton
           showing them during the final presidential debate in both a talking
           straight and an evasive manner with a particular emphasis
@@ -65,19 +67,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-push-2 col-md-6">
           <img src="images/beugism-trump-clinton-1.jpg" class="img-responsive margin-top" alt="Responsive image" height="243" width="600">
         </div>
-        <div class="col-md-6">
+        <div class="col-md-push-2 col-md-6">
           <img src="images/beugism-trump-clinton-2.jpg" class="img-responsive margin-top" alt="Responsive image" height="243" width="600">
         </div>
-        <div class="col-md-3 col-xs-9 col-sm-6">
+        <div class="col-md-push-2 col-md-3 col-xs-9 col-sm-6">
         <p class="margin-top">This is a screenshot of an interactive graphic presenting
           the timeline of the presidential debate. The infographic was realised by
           Carlo Zapponi from The Guardian.</p>
         </div>
       </div>
-      <div class="col-md-12">
+      <div class="col-md-push-2 col-md-12">
         <img src="images/beugism-donald-trump-infographic.png" class="img-responsive margin-top center-block margin-bottom" alt="Responsive image" height="1531" width="760">
         <button class="js-btn-back margin-bottom"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
       </div>
@@ -102,6 +104,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
