--- a/gosh.html
+++ b/gosh.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Alexander Beuge">
     <title>BEUGISM | Great Ormond Street Hospital</title>
     <link rel="icon" href="favicon.ico">
-    <link href="css/bootstrap.min.csss" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
