--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="col-md-4 col-sm-4 col-xs-6">
               <p class="text-muted text-right">
                 <ul class="list-inline pull-right">
-                  <li><a href="https://www.instagram.com/beugism/" target="_blank rel="noopener"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.instagram.com/beugism/" target="_blank" rel="noopener"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
                   <li><a href="https://twitter.com/beugism" target="_blank" rel="noopener"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a></li>
                   <li><a href="https://www.facebook.com/beugism" target="_blank" rel="noopener"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
                 </ul>
